--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>jar</packaging>
 
 	<name>billing-management</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Billing management app</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -51,12 +51,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-		<!--
-                <dependency>
-                    <groupId>com.h2database</groupId>
-                    <artifactId>h2</artifactId>
-                    <scope>runtime</scope>
-                </dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -104,7 +98,6 @@
 			<version>5.0.12.Final</version>
 		</dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
@@ -113,6 +106,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-
 </project>
